# frappe_web_push

./: README.md  pyproject.toml
frappe_web_push/: hooks.py  modules.txt
frappe_web_push/api/: notify.py
frappe_web_push/public/js/: web_push_init.js
