[project]
name = "frappe_web_push"
authors = [
    { name = "Frappe", email = "developers@frappe.io" }
]
description = "Native browser toast notifications for Frappe"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project.urls]
Repository = "https://github.com/your-org/frappe_web_push.git"
